# Python-Exercise-Management

./: .gitignore  README.md  conf.py  description.md  index.rst  json_to_md.py  main.py  management.py  pyproject.toml  solutions.rst  test.md  test.rst  test_main.py  update-docs.sh  update.sh  write_solutions_rst.py
.github/workflows/: master.yml  on-push.yml  pr-doc-check.yml
assets/exercise-files/: file-rw-code-name.json  file-rw-generate-code-name.json
docs/: .buildinfo  genindex.html  how-to-practice.html  index.html  objects.inv  search.html  searchindex.js  solutions.html  test.html
docs/.doctrees/: environment.pickle  how-to-practice.doctree  index.doctree  solutions.doctree  test.doctree
docs/_sources/: how-to-practice.rst.txt  index.rst.txt  solutions.rst.txt  test.md.txt  test.rst.txt
docs/exercises/: blah.html  escape-character.html  hamburger.html  hello-goodbye.html  hello-world.html  one-to-five.html
docs/ideas/: alogrithms.html  post-classes.html
exercise/: __init__.py  concepts.py  fixtures.py  get.py  start_session.py  submit.py  utils.py
exercise/docs/: conf.py  index.rst  json_to_rst.py
exercise/management/: __init__.py  exercises.json  form.md  main_menu.py  management.py
exercises/: escape-character.md  hello-world.md  index.rst  one-to-five.md
exercises/blah/: index.rst
ideas/: alogrithms.md  post-classes.md
management/: __init__.py  check_refs.py  concepts.py  create_io_tests.py  database.json  exercises.json  fundamentals_index.txt  json_to_md.py  main_menu.py  management.py  settings.py  types.py  utils.py
(+1607 files in other folders)
