[tool.poetry]
name = "exercise-runner-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.0"
sphinx = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
recommonmark = "^0.6.0"
python-slugify = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
